--- a/index.html
+++ b/index.html
@@ -336,51 +336,51 @@
                         <!-- Single Today Post -->
                         <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
                             <div class="todays-post-thumb">
-                                <img src="politics/img/3_3.jpg" alt="">
+                                <img src="commentary/img/1_2.jpg" alt="">
                             </div>
                             <div class="todays-post-content">
                                 <!-- Post Tag -->
                                 <div class="gazette-post-tag">
-                                    <a href="politics/category.html">Politics</a>
+                                    <a href="commentary/">Commentary</a>
                                 </div>
-                                <h3><a href="politics/the-us-has-reached-a-critical-juncture-in-history.html" class="font-pt mb-2">美国走到了历史的风陵渡口</a></h3>
+                                <h3><a href="commentary/eight_children.html" class="font-pt mb-2">丰县八孩事件，我们怎么看？</a></h3>
                                 <span class="gazette-post-date mb-2">January 7, 2021</span>
                                 <a class="post-total-comments">作者：红炉主人</a>
-                                <p>今天华盛顿发生的事态是美国历史上史无前例的，从来没有人用这种暴力和决绝的方式强行打断世界上最大的宪政民主国家的选举进程（参议院最终确认选举人投票结果）。毋庸置疑，美国的民主受到了巨大的挑战，华盛顿邮报的评论表示川普应该对今天的国会袭击事件负责并引咎下台。</p>
+                                <p>丰县八孩事件发酵已经一个多月了，据最新消息，江苏省委省政府成立“丰县生育八孩女子”事件调查组，整个事件已经进入最关键的阶段。 此前，大量的媒体人不畏威胁，赶赴事发的丰县欢口镇进行调查，当地的居民也陆续提供线索，大量的细节被披露出来... </p>
                             </div>
                         </div>
 
                         <!-- Single Today Post -->
                         <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
                             <div class="todays-post-thumb">
-                                <img src="business/img/image6.png" alt="">
-                            </div>
-                            <div class="todays-post-content">
-                                <!-- Post Tag -->
-                                <div class="gazette-post-tag">
-                                    <a href="business/category.html">Business</a>
-                                </div>
-                                <h3><a href="business/bitcoin.html" class="font-pt mb-2">有点像朋友圈？浅谈比特币交易系统的设计</a></h3>
-                                <p class="gazette-post-date mb-2">January 25, 2021</p>
-                                <a class="post-total-comments">作者：待添加</a>
-                                <p>刚刚过去的2020年比特币价格暴涨，投机气氛甚浓。笔者近日试图去理解与思考比特币交易系统的设计思路，其价值来源于哪里，长期而言比特币的前景如何等问题，并将自己近日所了解到的东西记录下来，写成了两篇文章。本文是第一篇，试图用最通俗的语言解释比特币交易系统是如何运转的。</p>
-                            </div>
-                        </div>
-                        
-                        <!-- Single Today Post -->
-                        <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
-                            <div class="todays-post-thumb">
-                                <img src="tech/img/image9.png" alt="">
+                                <img src="tech/img/omicron9.jpg" alt="">
                             </div>
                             <div class="todays-post-content">
                                 <!-- Post Tag -->
                                 <div class="gazette-post-tag">
                                     <a href="tech/category.html">Tech</a>
                                 </div>
-                                <h3><a href="tech/covid-vaccine-comparison.html" class="font-pt mb-2">新冠疫苗之比较 </a></h3>
+                                <h3><a href="file:///Users/wenxiyang/Documents/GitHub/website/tech/omicron.html" class="font-pt mb-2">奥密克戎毒株科普以及美国近期新冠疫情分析</a></h3>
+                                <p class="gazette-post-date mb-2">January 25, 2021</p>
+                                <a class="post-total-comments">作者：空谷幽兰</a>
+                                <p>最近，奥密克戎毒株在美国的流行打破了许多人对于疫情结束的幻想，奥密克戎以前所未有的速度在美利坚的土地上肆意驰骋，所到之处感染率飙升。那么，奥密克戎毒株究竟和以往的新冠毒株有着怎样的区别？奥密克戎目前流行的情况如何？我们留学生应该如何防御这种病毒呢？本篇文章就将对这几个问题进行深入分析，给尚在美国的海外学子们敲响警钟。 奥密克戎疫情可能是迄今为止传播最为凶险的一波疫情，这样的说法绝非危言耸听。</p>
+                            </div>
+                        </div>
+                        
+                        <!-- Single Today Post -->
+                        <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
+                            <div class="todays-post-thumb">
+                                <img src="politics/img/aoc4img3.png" alt="">
+                            </div>
+                            <div class="todays-post-content">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="politics/category.html">Politics</a>
+                                </div>
+                                <h3><a href="politics/aoc4.html" class="font-pt mb-2">左翼反建制派的政策优势</a></h3>
                                 <p class="gazette-post-date mb-2">January 1, 2021</p>
-                                <a class="post-total-comments">作者：待添加</a>
-                                <p>mRNA疫苗和常规灭活疫苗有什么区别？这三种疫苗的安全性如何？会有什么副作用？有效率又如何？有怎么样的接种方式？本文将会针对这些问题全面分析和比较这三种疫苗目前的公开数据，希望能给读者们一点启迪，让读者们明白各种疫苗的优劣，从而做出稳妥的选择。</p>
+                                <a class="post-total-comments">作者：格鲁希</a>
+                                <p>在前三篇文章中，我们介绍了克劳利的竞选优势（AOC的劣势）。首先，AOC想要进入国会，就必须进入垄断美国政治的两党之一，她于是参加了民主党的初选，直面已经连任了十届众议员的克劳利。作为民主党建制派，克劳利拥有强大的人脉，收获了大量知名政客和政治组织的背书。同时，克劳利还有金钱优势，通过自己和大企业的密切关系，募到了超AOC十倍的竞选资金。 但是，尽管在名望，人脉和资金上都远不如克劳利，AOC也有自己的优势：受欢迎的左翼政策，反建制派的形象，以及努力的竞选团队。本文将介绍AOC的第一大优势，她受欢迎的政策主张。 </p>
                             </div>
                         </div>
 
