--- a/society/category.html
+++ b/society/category.html
@@ -295,6 +295,35 @@
                         </div>
 
 
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Society</a>
+                                </div>
+                                <h4 class="font-pt">麦迪讯妇女节特别专栏| 一起倾听年轻女性的声音</h4>
+                                <p class="gazette-post-date">2022年3月9日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/qiujin.png" style="max-height: 250px; width: auto;"
+                                        alt="麦迪讯妇女节特别专栏| 一起倾听年轻女性的声音">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>国际妇女节是全世界许多国家都庆祝的节日。这一天，妇女们作出的成就得到肯定，无论她们的国籍、民族、语言、文化、经济状况和政治立场如何。自设立之初，国际妇女节为发达国家及发展中国家的妇女开启了一个新天地。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="Women'sDay.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
 <!------------------------------------------------------->
 
 
