--- a/global/category.html
+++ b/global/category.html
@@ -334,7 +334,7 @@
                                 <p class="gazette-post-date">2022年2月27日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
-                                    <img src="img/RU_War_FEB27_2.jpg" style="max-height: 250px; width: auto;"
+                                    <img src="img/RU_War_FEB27_2.png" style="max-height: 250px; width: auto;"
                                         alt="俄罗斯打得下乌克兰，但挺不过各国对其的经济制裁">
                                 </div>
                                 <!-- Post Excerpt -->
