--- a/index.html
+++ b/index.html
@@ -186,13 +186,7 @@
                                             <a class='nav-link' href='politics/category.html'>政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="business/category.html">财经 Business</a>
-                                        </li>
-                                        <li class="nav-item">
                                             <a class="nav-link" href="society/category.html">社会 Society</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="tech/category.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="recreation/category.html">文体 Recreation</a>
@@ -209,8 +203,13 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="global/category.html">国际 Global</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="history/category.html">历史 History</a>
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">更多内容 Others</a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <a class="dropdown-item" href="tech/category.html">科技 | Tech</a>
+                                                <a class="dropdown-item" href="history/category.html">历史 | History</a>
+                                                <a class="dropdown-item" href="business/category.html">财经 | Business</a>
+                                            </div>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
@@ -246,7 +245,7 @@
                             <div class="row">
                                 <div class="col-12 col-md-5">
                                     <div class="editorial-post-thumb">
-                                        <a href="about-us.html" class="font-pt mb-15"><img
+                                        <a href="about.html" class="font-pt mb-15"><img
                                                 src="img\core-img\welcome.jpg"
                                                 style="max-height: 250px; width: auto;" alt="关于我们"></a>
                                     </div>
@@ -270,7 +269,7 @@
                             <div class="row">
                                 <div class="col-12 col-md-5">
                                     <div class="editorial-post-thumb">
-                                        <a href="about-us.html" class="font-pt mb-15"><img
+                                        <a href="about.html" class="font-pt mb-15"><img
                                                 src="img/members-img/group1.jpg"
                                                 style="max-height: 250px; width: auto;" alt="关于我们"></a>
                                     </div>
@@ -397,34 +396,34 @@
 
                             <!-- Single Breaking News Widget -->
                             <div class="single-breaking-news-widget">
-                                <img src="recreation/img/Wang_Shuang.jpg" alt="">
+                                <img src="history/img/204.jpg" alt="">
                                 <div class="breakingnews-title">
-                                    <p>Recreation</p>
+                                    <p>History</p>
                                 </div>
-                                <a href="recreation/chinese-women-football.html" div class="breaking-news-heading gradient-background-overlay">
-                                    <h5 class="font-pt" >触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</h5>
+                                <a href="history/1912_Lawrence_02.html" div class="breaking-news-heading gradient-background-overlay">
+                                    <h5 class="font-pt" >劳伦斯大罢工2</h5>
                                 </a>
                             </div>
                             
                             <!-- Single Breaking News Widget -->
                             <div class="single-breaking-news-widget">
-                                <img src="society/img/JapanProtest.png" alt="">
+                                <img src="society/img/court.png" alt="">
                                 <div class="breakingnews-title">
                                     <p>Society</p>
                                 </div>
-                                <a href="society/tokyo-olympics.html" div class="breaking-news-heading gradient-background-overlay">
-                                    <h5 class="font-pt" >东京奥运，“办还是不办？” 麦迪讯带你了解奥运会背后的政治考量</h5>
+                                <a href="society/Trial.html" div class="breaking-news-heading gradient-background-overlay">
+                                    <h5 class="font-pt" >从一起2018年的谋杀案来看美国刑事审讯（trial）</h5>
                                 </a>
                             </div>
 
                             <!-- Single Breaking News Widget -->
                             <div class="single-breaking-news-widget">
-                                <img src="politics/img/2_1.jpg" alt="">
+                                <img src="history/img/402.jpg" alt="">
                                 <div class="breakingnews-title">
-                                    <p>Politics</p>
+                                    <p>History</p>
                                 </div>
-                                <a href="politics/the-eighteenth-brumaire-of-donald-trump-2.html" div class="breaking-news-heading gradient-background-overlay">
-                                    <h5 class="font-pt" >唐纳德·特朗普的雾月一十八日（下）</h5>
+                                <a href="history/RU_War_02.html" div class="breaking-news-heading gradient-background-overlay">
+                                    <h5 class="font-pt" >俄乌战争背后的历史恩怨（中）</h5>
                                 </a>
                             </div>
 
@@ -439,32 +438,32 @@
                             <!-- Single Don't Miss Post -->
                             <div class="single-dont-miss-post d-flex mb-30">
                                 <div class="dont-miss-post-thumb">
-                                    <img src="commentary/img/41_Zhang_Xi_Feng_In_Grade_12.jpg" alt="">
+                                    <img src="commentary/img/Taking_pictures.png" alt="">
                                 </div>
                                 <div class="dont-miss-post-content">
-                                    <a href="commentary/stars-will-shine-above-the-valley-floor.html" class="font-pt">就算是“土猪”，也可以仰望星空</a>
-                                    <span>Jun 9, 2021</span>
+                                    <a href="commentary/Alienate.html" class="font-pt">​你也被异化了？</a>
+                                    <span>March 14, 2022</span>
                                 </div>
                             </div>
 
                             <!-- Single Don't Miss Post -->
                             <div class="single-dont-miss-post d-flex mb-30">
                                 <div class="dont-miss-post-thumb">
-                                    <img src="commentary/img/45_Modern_Times.png" alt="">
+                                    <img src="commentary/img/NO 49_Scene.png" alt="">
                                 </div>
                                 <div class="dont-miss-post-content">
-                                    <a href="commentary/see-through-pigs-digging-cabbages.html" class="font-pt">从“土猪拱白菜”看什么是阶级</a>
-                                    <span>Jul 5, 2021</span>
+                                    <a href="commentary/about-chengdu-no49-middle-school.html" class="font-pt">记一次有必要的失误——由成都四十九中事件所想到的</a>
+                                    <span>March 17, 2022</span>
                                 </div>
                             </div>
 
                             <!-- Single Don't Miss Post -->
                             <div class="single-dont-miss-post d-flex mb-30">
                                 <div class="dont-miss-post-thumb">
-                                    <img src="commentary/img/LyingFlat_Stakhanov.png" alt="">
+                                    <img src="commentary/img/Nomadland_Nomadland.jpg" alt="">
                                 </div>
                                 <div class="dont-miss-post-content">
-                                    <a href="commentary/lying-flat.html" class="font-pt">年轻人选择“躺平”有罪否？</a>
+                                    <a href="commentary/nomadland.html" class="font-pt">创造历史，赵婷携《无依之地》获得小金人</a>
                                     <span>May 24, 2021</span>
                                 </div>
                             </div>
