--- a/society/category.html
+++ b/society/category.html
@@ -266,6 +266,35 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
 
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Society</a>
+                                </div>
+                                <h4 class="font-pt">上海，挺住！</h4>
+                                <p class="gazette-post-date">2022年3月28日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Map.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="上海疫情地图">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>从昨天开始，上海将分批进入疫情封闭化管理阶段。3月28日5时起，上海市以黄浦江为界分区分批实施核酸筛查。第一批，浦东、浦南及毗邻区域先行实施封控，开展核酸筛查，4月1日5时解封。同时，浦西地区重点区域继续实施封控管理。第二批，4月1日3时起，对浦西地区实施封控，开展核酸筛查，4月5日3时解封。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="Shanghai.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
                             <div class="gazette-welcome-post">
