--- a/recreation/category.html
+++ b/recreation/category.html
@@ -273,6 +273,39 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Recreation</a>
                                 </div>
+                                <h4 class="font-pt">波士顿马拉松禁止来自俄罗斯
+与白俄罗斯的运动员参赛</h4>
+                                <p class="gazette-post-date">2022年4月6日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Marathon.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="波士顿马拉松禁止来自俄罗斯
+与白俄罗斯的运动员参赛">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>4月6日，波士顿体育运动协会（BAA）宣布，来自俄罗斯与白俄罗斯的运动员将被禁止参加2022年的波士顿马拉松比赛。
+据BAA官网消息，目前居住在俄罗斯与白俄罗斯的两国公民不能参加比赛，不居住在俄罗斯与白俄罗斯的两国公民可以参加比赛，但他们参赛期间不能出示两国国旗。BAA还称，被拒绝参赛的俄罗斯、白俄罗斯运动员将获得退款。
+
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="Russia.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Recreation</a>
+                                </div>
                                 <h4 class="font-pt">阿克塞尔四周跳”虽败犹荣 羽生结弦：“已经交出了自己的全部” ；中国女子钢架雪车首秀， 旗手赵丹、黎禹汐晋级</h4>
                                 <p class="gazette-post-date">2022年2月10日</p>
                                 <!-- Post Thumbnail -->
