weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -253,7 +253,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>April 4, 2022</p>
+                            <p>April 11, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -297,17 +297,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年3月28日~4月3日一周疫情简报：
+                                <p>2022年4月4日~10日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所升高（上升25%），病例总数超过139万例，平均每日增长376例（上周为301例）；累计死亡12799人，最近一周新增死亡24人（上周为241人）。一周新增病例数目最多的地区包括戴恩郡Madison（+748）、密尔沃基郡Milwaukee（+480）、Waukesha郡（+146）、Rock郡（+95）、Racine郡（+82）、布朗郡Green Bay（+65）、Winnebago郡（+61）、Washington郡（+58）、La Crosse郡（+57）、Kenosha郡（+50），其他郡一周新增人数在50人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周急剧升高（上升65%），病例总数超过139万例，平均每日增长618例（上周为376例）；累计死亡12828人，最近一周新增死亡29人（上周为24人）。一周新增病例数目最多的地区包括戴恩郡Madison（+965）、密尔沃基郡Milwaukee（+866）、Waukesha郡（+373）、布朗郡Green Bay（+177）、基诺沙郡Kenosha（+126）、Rock郡（+119）、Winnebago郡（+115）、Racine郡（+113）、Eau Claire郡（+86）、Outagamie郡（+82）、Ozaukee郡（+82）、La Crosse郡（+79）、Fond du Lac郡（+68）、St. Croix郡（+65）、Washington郡（+57）、Green郡（+52），其他郡一周新增人数在50人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所升高（上升44%），目前病例总数为118513例，周内新增751例，平均每日增长107例（上周为75例），一周平均检测阳性率为5.0%（高于上周的3.6%）。戴恩郡新冠住院病人数目由24人升至28人；重症病房新冠病人数目由3人降至1人；累计死亡471例，新增2例（上周为2例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所升高（上升19%），目前病例总数为119408例，周内新增895例，平均每日增长128例（上周为107例），一周平均检测阳性率为6.4%（高于上周的5.0%）。戴恩郡新冠住院病人数目由28人升至34人；重症病房新冠病人数目由1人升至3人；累计死亡474例，新增3例（上周为2例）。
 
-                                    <br><br>—  截止到4月3日，戴恩郡接种至少一剂疫苗者超过45.8万人，占总人口82.9%；完成接种疫苗者超过43.3万人，占总人口的78.5%；完成接种加强针者占62.9%。
+                                    <br><br>—  截止到4月3日，戴恩郡接种至少一剂疫苗者超过45.8万人，占总人口83.0%；完成接种疫苗者超过43.4万人，占总人口的78.6%；完成接种加强针者占63.0%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：S Midvale Blvd与Tokay Blvd路口附近区域、戴恩郡西南部的Mt Horeb、Lake Mendota东北岸部分区域、Waunakee市、Shorewood Hills、戴恩郡北部（Waunakee市南侧及东西两侧）大片地区、Lake Monona东北岸部分区域（Eastmorland Park附近）、Lake Mendota东北岸的Maple Bluff等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Monona东北岸部分区域（Eastmorland Park附近）、S Midvale Blvd与Tokay Blvd路口附近区域、Beltline高速255至257号出口区段南北两侧区域、Lake Mendota东北岸的Maple Bluff、MSN机场附近、Lake Monona东岸与西北岸等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性44例（上周为43例，上升2%），包括学生34例（上周为33例，上升3%）、职工10例（上周为10例，相同）。一周检测阳性率为学生2.5%（上周为2.2%），职工2.7%（上周为2.3%）。截至目前，学生疫苗接种率为95.8%，职工疫苗接种率为96.4%。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性45例（上周为44例，上升2%），包括学生37例（上周为34例，上升9%）、职工8例（上周为10例，下降20%）。一周检测阳性率为学生5.2%（上周为2.5%），职工3.3%（上周为2.7%）。截至目前，学生疫苗接种率为95.8%，职工疫苗接种率为96.4%。
                                                                         
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
