--- a/politics/jackson.html
+++ b/politics/jackson.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 | 普京宣布在乌克兰开展军事行动</title>
+    <title>麦迪讯 | 拜登的最高法院提名人凯坦吉-布朗-杰克逊开辟人生巅峰</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>            
         <!-- Bottom Header Area -->
         <div class="bottom-header">
             <div class="container h-100">
@@ -242,18 +242,18 @@
 
     <section class="single-post-area">
         <!-- Single Post Title -->
-        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/global_bg.png);">
+        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/politics_bg.png);">
             <div class="container h-100">
                 <div class="row h-100 align-items-end">
                     <div class="col-12">
                         <div class="single-post-title-content">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
-                                <a href="#">Global</a>
+                                <a href="">Politics</a>
                             </div>
-                            <h2 class="font-pt">普京宣布在乌克兰开展军事行动</h2>
-                            <p>Feb 23, 2022</p>
-                            <p>作者：麦迪讯通讯社</p>
+                            <h2 class="font-pt">拜登的最高法院提名人凯坦吉-布朗-杰克逊开辟人生巅峰</h2>
+                            <p>March 4, 2022</p>
+                            <p>新闻来源：NRP</p>
                         </div>
                     </div>
                 </div>
@@ -263,33 +263,25 @@
         <div class="single-post-contents">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-md-8">
-                        <div class="single-post-text">
 
-
-
-                            <div class="col-12 col-md-8">
-                                <div class="single-post-text">
-                                    <p><b>俄罗斯在乌克兰开展军事行动</b></p>
-                                </div>
-                            </div>
-                            <p>俄罗斯总统弗拉基米尔·普京刚刚宣布在乌克兰顿巴斯地区开展“军事行动”。</p>
-                            <p>他敦促乌克兰东部战区的乌克兰士兵放下武器并返回家园，还表示，“正义和真相”在俄罗斯一方，并警告说，如果有人试图与俄罗斯抗衡，莫斯科的反应将是“即时的”。</p>
-                            <p>基辅的 BBC 的保罗亚当斯刚刚报道在基辅听到五到六次“远处爆炸”，并表示有报道称该国其他地方也发生了爆炸。</p>
-                            <p>美国总统乔·拜登对他所谓的“俄罗斯军队无端和无理的攻击”做出了回应。他说“全世界的祈祷与乌克兰人民同在”。“普京总统选择了一场有预谋的战争，这将带来灾难性的生命损失和人类苦难，”他说。“俄罗斯独自应对这次袭击将带来的死亡和破坏负责，美国及其盟国和伙伴将以统一和果断的方式作出回应。世界将追究俄罗斯的责任。”</p>
-                            <p>拜登表示，他将在周四向美国人发表关于俄罗斯将面临的后果的讲话。他说他将在白宫监视局势，并将在早上与七国集团领导人会面，然后宣布对俄罗斯的“进一步后果”。</p>
-                            <p>拜登表示，北约盟国将做出“强烈、统一的回应”，阻止对其成员的任何侵略。“今晚，吉尔和我会为乌克兰勇敢而自豪的人民祈祷，”他说。（就是说啥都不干，编辑注）</p>
-                            <p>据路透社报道，乌克兰驻联合国大使谢尔盖·基斯利齐亚说，俄罗斯驻联合国特使已经证实，他的总统已宣布“对我的国家发动战争”。</p>
-                            <p>乌克兰内政部告诉 CNN：“入侵已经开始。” (BBC)</p>
+                    <div class="col-12">
+                        <div class="single-post-thumb">
+                            <center>
+                                <img src="img/jackson.jpg" alt="" width="600">
+                                <p style="font-size:13px">图片来源：NRP</p>
+                            </center>
                         </div>
                     </div>
 
-
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p></p>
+                            <p>凯坦吉-布朗-杰克逊是美国有史以来第二位被任命为联邦法官的黑人妇女，与康斯坦斯-贝克-莫特利--首位被任命为联邦法官的黑人妇女（Constance Baker Motley）同一天生日。杰克逊说，她站在她的肩膀上，与她一样致力于法律下的平等正义。"我只能希望我的生活和事业，以及我对这个国家和宪法的热爱将激励未来几代美国人。</p>
+                            <p>在周五介绍杰克逊的白宫活动中，拜登将她描述为一位具有 "务实理念，法律必须为美国人民服务 "的共识建立者。51岁的杰克逊过着既经典又不可预测的职业和个人生活。和丈夫都是哈佛大学法学院毕业，一路向前。在职业上，她是一位经验丰富的法官。八年来，一直担任联邦审判法庭的法官，去年六月在美国哥伦比亚特区上诉法院拥有一席之位。</p>
+                            <p>在她成为法官之前，她的法律经验是广泛而多样的。虽然目前法院的四名成员曾经是检察官，但杰克逊如果被提名，将是瑟古德-马歇尔以来第一位代表贫困刑事被告的最高法院法官。</p>
+                            <p>在白宫的活动中，杰克逊说："在这些非常简短的发言中，我必须首先感谢上帝将我带到我的职业旅程中的这一点。"我的生活得到了无尽的祝福，我确实知道，一个人只有通过信仰才能走到今天"。</p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
