--- a/recreation/yushengjiexian.html
+++ b/recreation/yushengjiexian.html
@@ -190,13 +190,7 @@
                                             <a class='nav-link' href='../politics/category.html'>政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../business/category.html">财经 Business</a>
-                                        </li>
-                                        <li class="nav-item">
                                             <a class="nav-link" href="../society/category.html">社会 Society</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="../tech/category.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="../recreation/category.html">文体 Recreation</a>
@@ -209,13 +203,18 @@
                                             <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../campus/pandemic.html">校园 Campus</a>
+                                            <a class="nav-link" href="../campus/category.html">校园 Campus</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../global/pandemic.html">国际 Global</a>
+                                            <a class="nav-link" href="../global/category.html">国际 Global</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="../history/pandemic.html">历史 History</a>
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">更多内容 Others</a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <a class="dropdown-item" href="../tech/category.html">科技 | Tech</a>
+                                                <a class="dropdown-item" href="../history/category.html">历史 | History</a>
+                                                <a class="dropdown-item" href="../business/category.html">财经 | Business</a>
+                                            </div>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
