--- a/global/category.html
+++ b/global/category.html
@@ -347,6 +347,32 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">斯里兰卡经济危机惹民怨</h4>
+                                <p class="gazette-post-date">2022年4月3日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Sri_Lankan_Protests_2.png" style="max-height: 250px; width: auto;"
+                                        alt="斯里兰卡经济危机惹民怨">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>受到新冠肺炎疫情及俄乌战争的后续效应影响，以旅游业作为首要经济来源的斯里兰卡近来身陷经济危机。然而，斯里兰卡政府处理本次危机的方式引起了大批民众的不满情绪.</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="Feb27_RU_War_Sanction.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
 
