--- a/global/Feb27_RU_War_Sanction.html
+++ b/global/Feb27_RU_War_Sanction.html
@@ -272,12 +272,20 @@
                                 <div class="single-post-text">
                                 </div>
                             </div>
+                            <div class="col-12">
+                                <div class="single-post-thumb">
+                                    <center>
+                                        <img src="img/RU_War_FEB27_2.png" alt="" width=auto>
+                                        <p style="color: grey; line-height: 50px"></p>
+                                    </center>
+                                </div>
+                            </div>
                             <p>当地时间2月24日，俄罗斯正式宣布对乌克兰採取“特别军事行动”：从东部工业重镇哈尔卡夫，到首都基辅，四处都可见到俄军身影，而乌克兰方面则未能形成有组织反抗。由于美国和北约一早已讲明，不会派兵进入乌克兰境内作战，即使未来一段时间需要面对游击队或孤狼式反抗，但普京兼併乌克兰俄语区、在当地建立傀儡政府的目标仍有望达成。</p>
                             <p>然而，当下的俄罗斯虽然在军事实力上不弱于西方，但经济上却极为孱弱，注定要在西方新一轮制裁前付出沉重代价。根据拜登24日晚间记者会发言，及其他公开资料，西方国家的制裁主要包括两方面：</p>
                             <p><b>1）切断俄罗斯对外金融联系。</b></p>
                             <p>具体包括冻结俄罗斯外贸银行（VTB）及国营联邦储备银行（Sberbank）在所有西方国家的资产。禁止美国和盟友公民，及同美国公民有业务往来的外国个人，和几乎所有俄罗斯主要银行接触。由于这两家银行控制超过1.5万亿美元资产，而美国的“长臂管辖”又几乎可涵盖全球所有人，此举基本让大部分和俄罗斯有关的金融交易都沦为非法。而长年“维持中立”的瑞士，已宣布将参与该项制裁。</p>
                             <p><b>2）科技和贸易制裁。</b></p>
-                            <p>比照美国当下对伊朗、北韩，或华为等企业的禁运政策，禁止任何使用美国或盟友科技的产品输往俄罗斯。由于全球主要半导体生产国韩国和台湾都已声明将配合制裁，这也意味著未来不会有一片14纳米以上晶片能流入俄罗斯，当地人再也无法购买到最新款电子产品。而在实施类似制裁的伊朗，航空公司由于制裁无法向波音和空中巴士公司购买零件，只能让服役30多年的波音707等飞机继续延役。至于俄罗斯原本从西方国家进口的工业设备，未来维修保养一律终止，自求多福。</p>
+                            <p>比照美国当下对伊朗、北韩，或华为等企业的禁运政策，禁止任何使用美国或盟友科技的产品输往俄罗斯。由于全球主要半导体生产地区都已声明将配合制裁，这也意味著未来不会有一片14纳米以上晶片能流入俄罗斯，当地人再也无法购买到最新款电子产品。而在实施类似制裁的伊朗，航空公司由于制裁无法向波音和空中巴士公司购买零件，只能让服役30多年的波音707等飞机继续延役。至于俄罗斯原本从西方国家进口的工业设备，未来维修保养一律终止，自求多福。</p>
                             <p>目前看来，今次针对俄罗斯的两项制裁，在严厉程度上，达到了前所未有规模。俄罗斯企业的海外市场、海外融资渠道几乎一夕尽丧；未来也无法从中国以外的市场获取任何资源。制裁更首次团结起美国几乎所有盟友。2014年俄罗斯入侵克里米亚后，美国推出的制裁主要限于金融层面，包括澳洲、日本、南韩等亚洲盟友并未参与；而美国针对伊朗的长期制裁，不仅未获欧盟支持，后者还开发起SPV结算系统协助本国企业和伊朗贸易。今次制裁却24小时内“全员到齐”，显见事前已做极充分协调。</p>
                             <p><b>-这样的制裁具体会带来什么后果？</b></p>
                             <p>以同为石油输出国的伊朗为例，该国在2020年的经济体量只有8年前的三分之一，衰退达67%之多。受疫情和制裁双重影响，该国上年通胀率达50%，民众薪资折算成购买力平价不及10年前的4成。从2019年开始，伊朗境内已爆发19场群体抗议活动，对当局的不满升至史上高点。</p>
