--- a/global/category.html
+++ b/global/category.html
@@ -367,7 +367,7 @@
                                 <!-- Reading More -->
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
-                                        <a href="Feb27_RU_War_Sanction.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                        <a href="Apr03_Sri_Lanka_Protests.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
                                                 class="fa fa-chevron-right" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
