--- a/global/Feb27_RU_War_Hacker.html
+++ b/global/Feb27_RU_War_Hacker.html
@@ -273,6 +273,14 @@
                                     <p><b>全球最大骇客组织对俄罗斯发网络攻击 回应“野蛮入侵”乌克兰</b></p>
                                 </div>
                             </div>
+                            <div class="col-12">
+                                <div class="single-post-thumb">
+                                    <center>
+                                        <img src="img/RU_War_FEB27_1.jpg" alt="" width=auto>
+                                        <p style="color: grey; line-height: 50px"></p>
+                                    </center>
+                                </div>
+                            </div>
                             <p>俄罗斯向乌克兰发起军事行动后，各国领导人纷纷谴责并制裁俄罗斯，堪称“全球最大骇客组织”匿名者（Anonymous）日前也透过Twitter向俄罗斯政府“宣战”，表示将对俄罗斯发起网路攻击，并特别在贴文中标注乌克兰，以示对乌克兰的支持。</p>
                             <p>事实上，早在15日匿名者就曾发影片警告俄罗斯，若俄罗斯与乌克兰之间的对峙升级，组织将毫不犹豫骇进俄罗斯的工业控制系统。随著昨日俄乌战争爆发，匿名者再次发文表示，该组织已骇入关闭俄罗斯官媒Russia Today的官网，以作为俄罗斯“野蛮入侵”乌克兰的回应。</p>
                             <p>在俄罗斯攻击乌克兰首日，俄罗斯网路服务供应商Com2Com、RELCOM、PTT-Teleport Moscow以及 Sovam Teleport等企业官网相继遭骇客入侵而瘫痪。RT News官方也表示，从当地时间下午五点开始，其旗下网站一直遭到网路攻击，无法正常运作，经调查发现其中约有27%的黑客是来自美国。此外，亦有其他骇客在Twitter上发佈标记#OpRussia或#OpKremlin贴文，宣佈将骇入俄罗斯网站。有匿名帐号声称其关闭了克林姆林宫、俄罗斯政府以及国防部的网站；还有其他骇客组织表示，以攻击俄罗斯联邦局（FAS）的网站致瘫痪。</p>
