--- a/global/Feb23_RU_War.html
+++ b/global/Feb23_RU_War.html
@@ -281,6 +281,14 @@
                             <p>拜登表示，北约盟国将做出“强烈、统一的回应”，阻止对其成员的任何侵略。“今晚，吉尔和我会为乌克兰勇敢而自豪的人民祈祷，”他说。（就是说啥都不干，编辑注）</p>
                             <p>据路透社报道，乌克兰驻联合国大使谢尔盖·基斯利齐亚说，俄罗斯驻联合国特使已经证实，他的总统已宣布“对我的国家发动战争”。</p>
                             <p>乌克兰内政部告诉 CNN：“入侵已经开始。” (BBC)</p>
+                            <div class="col-12">
+                                <div class="single-post-thumb">
+                                    <center>
+                                        <img src="img/RU_War_FEB23.jpg" alt="" width=auto>
+                                        <p style="color: grey; line-height: 50px"></p>
+                                    </center>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
