--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -190,13 +190,7 @@
                                             <a class='nav-link' href='../politics/category.html'>政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../business/category.html">财经 Business</a>
-                                        </li>
-                                        <li class="nav-item">
                                             <a class="nav-link" href="../society/category.html">社会 Society</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="../tech/category.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="../recreation/category.html">文体 Recreation</a>
@@ -207,6 +201,20 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="../campus/category.html">校园 Campus</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="../global/category.html">国际 Global</a>
+                                        </li>
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">更多内容 Others</a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <a class="dropdown-item" href="../tech/category.html">科技 | Tech</a>
+                                                <a class="dropdown-item" href="../history/category.html">历史 | History</a>
+                                                <a class="dropdown-item" href="../business/category.html">财经 | Business</a>
+                                            </div>
                                         </li>
                                     </ul>
                                     <!-- Search Form -->
@@ -244,11 +252,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-<<<<<<< HEAD
-                            <p>February 28, 2022</p>
-=======
-                            <p>April 11, 2022</p>
->>>>>>> parent of ffdc33d (weekly covid update)
+                            <p>April 25, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -292,31 +296,17 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-<<<<<<< HEAD
-                                <p>2022年2月21日~27日一周疫情简报：
+                                <p>2022年4月18日~24日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周大幅降低（下降39%），病例总数超过138万例，平均每日增长671例（上周为1104例）；累计死亡11921人，最近一周新增死亡191人（上周为127人）。一周新增病例数目最多的地区包括戴恩郡Madison（+634）、密尔沃基郡Milwaukee（+573）、沃基肖郡Waukesha（+313）、布朗郡Green Bay（+216）、La Crosse郡（+155）、Rock郡（+149）、Marathon郡（+137）、Winnebago郡（+131）、Racine郡（+123）、Eau Claire郡（+121）、Outagamie郡（+121），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周大幅升高（上升67%），病例总数超过141万例，平均每日增长例1037（上周为623例）；累计死亡12874人，最近一周新增死亡12人（上周为34人）。一周新增病例数目最多的地区包括戴恩郡Madison（+1665）、密尔沃基郡Milwaukee（+1460）、Waukesha郡（+506）、Winnebago郡（+229）、Rock郡（+217）、布朗郡Green Bay（+205）、La Crosse郡（+198）、Outagamie郡（+183）、Racine郡（+168）、Washington郡（+162）、Marathon郡（+160）、基诺沙郡Kenosha（+137）、Ozaukee郡（+131）、Eau Claire郡（+131）、Fond du Lac郡（+128）、Sheboygan郡（+104），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅降低（下降43%），目前病例总数为115912例，周内新增633例，平均每日增长90例（上周为157例），一周平均检测阳性率为4.6%（低于上周的6.8%）。戴恩郡新冠住院病人数目由77人降至64人；重症病房新冠病人数目由14人降至10人；累计死亡453例，新增5例（上周为10例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅升高（上升67%），目前病例总数为122104例，周内新增1687例，平均每日增长241例（上周为144例），一周平均检测阳性率为8.7%（高于上周的6.7%）。戴恩郡新冠住院病人数目由26人升至28人；重症病房新冠病人数目由3人升至4人；累计死亡475例，新增0例（上周为1例）。
 
-                                    <br><br>—  截止到2月27日，戴恩郡已接种疫苗总数超过87万剂。接种至少一剂疫苗者超过45万人，占总人口83%；完成接种疫苗者超过43万人，占总人口的78%；完成接种加强针者占69.2%。
+                                    <br><br>—  截止到4月24日，戴恩郡接种至少一剂疫苗者超过45.8万人，占总人口83.1%；完成接种疫苗者超过43.4万人，占总人口的78.7%；完成接种加强针者占63.3%。
 
-                                    <br><br>—  戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：威大UW Eagle Heights和University Houses公寓区、Middleton市东北部（包括Lake Mendota湖西岸）、戴恩郡南部边界地区（Oregon以南）、Monona市部分地区（Beltline高速与Stoughton Rd路口西北）、Venora市部分地区（Midtown Rd至US-151一带），详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：MSN机场附近及其南侧区域、戴恩郡东郊部分地区（McCarthy Park南侧）、Lake Mendota西南岸（Middleton东南）、Beltline高速东段与US-51高速及I-90高速交叉口南侧区域、Middleton西南部部分地区等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性51例（上周为99例，下降48%），包括学生46例（上周为97例，下降53%）、职工5例（上周为2例，上升150%）。一周检测阳性率为学生2.8%（上周为5.0%），职工1.2%（上周为0.4%）。截至2月27日，学生疫苗接种率为95.6%，职工疫苗接种率为96.6%。
-=======
-                                <p>2022年4月4日~10日一周疫情简报：
-
-                                    <br><br>—  威斯康星州疫情增长速度较上周急剧升高（上升65%），病例总数超过139万例，平均每日增长618例（上周为376例）；累计死亡12828人，最近一周新增死亡29人（上周为24人）。一周新增病例数目最多的地区包括戴恩郡Madison（+965）、密尔沃基郡Milwaukee（+866）、Waukesha郡（+373）、布朗郡Green Bay（+177）、基诺沙郡Kenosha（+126）、Rock郡（+119）、Winnebago郡（+115）、Racine郡（+113）、Eau Claire郡（+86）、Outagamie郡（+82）、Ozaukee郡（+82）、La Crosse郡（+79）、Fond du Lac郡（+68）、St. Croix郡（+65）、Washington郡（+57）、Green郡（+52），其他郡一周新增人数在50人以下。
-
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所升高（上升19%），目前病例总数为119408例，周内新增895例，平均每日增长128例（上周为107例），一周平均检测阳性率为6.4%（高于上周的5.0%）。戴恩郡新冠住院病人数目由28人升至34人；重症病房新冠病人数目由1人升至3人；累计死亡474例，新增3例（上周为2例）。
-
-                                    <br><br>—  截止到4月3日，戴恩郡接种至少一剂疫苗者超过45.8万人，占总人口83.0%；完成接种疫苗者超过43.4万人，占总人口的78.6%；完成接种加强针者占63.0%。
-
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Monona东北岸部分区域（Eastmorland Park附近）、S Midvale Blvd与Tokay Blvd路口附近区域、Beltline高速255至257号出口区段南北两侧区域、Lake Mendota东北岸的Maple Bluff、MSN机场附近、Lake Monona东岸与西北岸等，详情请查看所附地图。
-
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性45例（上周为44例，上升2%），包括学生37例（上周为34例，上升9%）、职工8例（上周为10例，下降20%）。一周检测阳性率为学生5.2%（上周为2.5%），职工3.3%（上周为2.7%）。截至目前，学生疫苗接种率为95.8%，职工疫苗接种率为96.4%。
->>>>>>> parent of ffdc33d (weekly covid update)
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性91例（上周为66例，上升38%），包括学生70例（上周为50例，上升40%）、职工21例（上周为21例，上升31%）。一周检测阳性率为学生8.8%（上周为6.2%），职工7.3%（上周为5.3%）。截至目前，学生疫苗接种率为95.8%，职工疫苗接种率为96.2%。
                                                                         
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
